--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cloud_firestore: ^0.13.5
   uuid: ^2.0.4
   provider: ^4.0.5
+  firebase_storage: ^3.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
