--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   uuid: ^2.0.4
   provider: ^4.0.5
   firebase_storage: ^3.1.5
+  url_launcher: ^5.4.10
 
 
   # The following adds the Cupertino Icons font to your application.
